# fastapi-boilerplate-project-design

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
src/: app.py  celery.py  tasks.py
src/auth/: auth_bearer.py
src/core/: celery_config.py  cipher.py  config.py
src/core/cache/: backend.py  base.py  redis.py  utils.py
src/core/database/: mongo_client.py
src/core/error/: http_error.py  validation_error.py
src/core/logs/: logger.py
src/core/middlewares/: throttler.py
src/core/utils/: __init__.py  base_response.py  events.py  helpers.py  serializers.py
